Fix data view card overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,12 +5,6 @@
 }
 
 :root {
-  --bg-custom-subOrder: red;
-  --custom-light-blue: red;
-  --custom-light-green: red;
-  --custom-cyan: red;
-  --custom-cream: red;
-  --custom-red: red;
   --custom-orange-50: #fff2e2;
   --custom-orange-100: #ffdcb7;
   --custom-orange-200: #ffc68a;
@@ -42,7 +36,7 @@
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box !important;
 }
 
 input {
@@ -76,4 +70,13 @@ button:focus {
 
 .button-no-outline:focus {
   outline: none !important;
+}
+
+.icon-btn:hover {
+  filter: brightness(1.1);
+  transform: scale(1.1);
+}
+
+.icon-btn:active {
+  background: var(--custom-light-black) !important;
 }
